--- a/ios/mapNotes/Info.plist
+++ b/ios/mapNotes/Info.plist
@@ -26,13 +26,16 @@
 	<true/>
 	<key>NSAppTransportSecurity</key>
 	<dict>
-	  <!-- Do not change NSAllowsArbitraryLoads to true, or you will risk app rejection! -->
 		<key>NSAllowsArbitraryLoads</key>
 		<false/>
 		<key>NSAllowsLocalNetworking</key>
 		<true/>
 	</dict>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Would you like to grant permission to access your location for using the map application?</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Would you like to grant permission to access your location for using the map application?</string>
+	<key>NSPrefPaneIconFile</key>
 	<string></string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
