--- a/package.json
+++ b/package.json
@@ -10,8 +10,24 @@
     "test": "jest"
   },
   "dependencies": {
+    "@eva-design/eva": "^2.2.0",
+    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-community/geolocation": "^3.4.0",
+    "@react-native-firebase/app": "^21.6.1",
+    "@react-native-firebase/auth": "^21.6.1",
+    "@react-native-firebase/firestore": "^21.6.1",
+    "@react-navigation/native": "^7.0.9",
+    "@react-navigation/native-stack": "^7.1.10",
+    "@ui-kitten/components": "^5.3.1",
+    "formik": "^2.4.6",
+    "iconsax-react-native": "^0.0.8",
     "react": "18.2.0",
-    "react-native": "0.73.8"
+    "react-native": "0.73.8",
+    "react-native-maps": "^1.20.1",
+    "react-native-safe-area-context": "^4.14.0",
+    "react-native-screens": "^4.3.0",
+    "react-native-svg": "^15.9.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
